--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
         "issues": "https://github.com/zumba/elasticsearchunit/issues"
     },
     "require": {
-        "php": ">=5.6.0",
-        "ext-curl": "*"
+        "ext-curl": "^7.0",
+        "php": "^7.0"
     },
     "require-dev": {
-    	"phpunit/phpunit": "~5.7",
-        "elasticsearch/elasticsearch": "~5.1"
+        "elasticsearch/elasticsearch": "~6.0",
+        "phpunit/phpunit": "^6"
     },
     "config": {
         "bin-dir": "bin"
